# solana-poker

./: .gitignore  CLAUDE.md  Cargo.toml
docs/: architecture.md  testing.md
src/: constants.rs  entrypoint.rs  error.rs  lib.rs  processor.rs
src/crypto/: bn254.rs  commitments.rs  mod.rs  secp256k1.rs
src/instructions/: bet.rs  claim_pot.rs  close_game.rs  deal_community.rs  draw.rs  fold.rs  generate.rs  initialize_game.rs  join_game.rs  leave.rs  lock.rs  lock_part1.rs  lock_part2.rs  map_deck.rs  map_deck_part1.rs  map_deck_part2.rs  mod.rs  open.rs  open_community_card.rs  place_blind.rs  reveal.rs  shuffle.rs  shuffle_part1.rs  shuffle_part2.rs  slash.rs  start_next_game.rs  submit_best_hand.rs  test_compression.rs
src/poker/: card.rs  hand_utils.rs  mod.rs  ranking.rs
src/state/: accumulator.rs  community_cards.rs  deck_state.rs  enums.rs  game_config.rs  game_state.rs  mod.rs  player_list.rs  player_state.rs
src/utils/: mod.rs  pda.rs  validation.rs
tests/: compression-debug.ts  compression-debug2.ts  compression-debug3.ts  jest.config.js  package.json  test-compression.ts  tsconfig.json
tests/helpers/: actions.ts  crypto.ts  hand-analyzer.ts  setup.ts  validator.ts
tests/integration/: compression.test.ts  game.test.ts  slash.test.ts
web/: .env.example  package-lock.json  package.json  vite.config.ts
web/src/: app.html
web/src/lib/components/: Card.svelte  CreateTable.svelte  Desktop.svelte  JoinTable.svelte  PokerTable.svelte  TableLobby.svelte  Taskbar.svelte  Wallet.svelte  Window.svelte
web/src/routes/: +layout.svelte  +page.svelte
(+14 files in other folders)
