[package]
name = "solana-poker"
version = "0.1.0"
edition = "2021"
description = "Mental Poker Texas Hold'em on Solana using Pinocchio"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
bpf-entrypoint = []

[dependencies]
pinocchio = "0.9"
pinocchio-pubkey = "0.3"
pinocchio-token = "0.4"
pinocchio-system = "0.4"
solana-bn254 = "3.1"

[dev-dependencies]
solana-program-test = "2.0"
solana-sdk = "2.0"
tokio = { version = "1", features = ["full"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
